@startuml GameMap

' =========================
'  Skin
' =========================

skinparam shadowing false
skinparam roundcorner 5
skinparam dpi 150

skinparam DefaultFontName "Inter"
skinparam DefaultFontSize 12
skinparam classAttributeIconSize 0
skinparam Linetype ortho

skinparam class {
  BackgroundColor #F9F9F9
  BorderColor #BFBFBF
  FontColor #333333
}

skinparam Arrow {
  Color #9E9E9E
  Thickness 1
}

hide circle
hide empty members

' =========================
'  Classes
' =========================

interface MapObject << Interface >> {
    +getPosition() : Vector2dc
    +getHitbox() : double
    +isAlive() : boolean
}

interface GameMap << Interface >> {
    +getAllObjects() : List<MapObject>
    +updateEntities(long deltaTime, Vector2dc playerDirection) : void 
    +spawnEnemies(double deltaSeconds) : void 
    +setEnemySpawnLogic(EnemySpawner spawnLogic) : void 
    +getMapBestiary() : Map<String, Integer> 
}

class GameMapImpl {
    #addObject(MapObject obj)
    #removeObject(MapObject obj)
}

GameMap --o MapObject

GameMapImpl ..|> GameMap


@enduml 